# internal/api/oas_unimplemented_gen.go
@@ -1,0 +1,152 @@
+// Code generated by ogen, DO NOT EDIT.
+
+package api
+
+import (
+	"context"
+
+	ht "github.com/ogen-go/ogen/http"
+)
+
+// UnimplementedHandler is no-op Handler which returns http.ErrNotImplemented.
+type UnimplementedHandler struct{}
+
+var _ Handler = UnimplementedHandler{}
+
+// ConfigGet implements GET /config operation.
+//
+// 設定情報の取得.
+//
+// GET /config
+func (UnimplementedHandler) ConfigGet(ctx context.Context) error {
+	return ht.ErrNotImplemented
+}
+
+// ConfigPost implements POST /config operation.
+//
+// 本職権限のみ実行可能.
+//
+// POST /config
+func (UnimplementedHandler) ConfigPost(ctx context.Context, req *ConfigPostReq) (r ConfigPostRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// TicketsGet implements GET /tickets operation.
+//
+// チケット一覧取得.
+//
+// GET /tickets
+func (UnimplementedHandler) TicketsGet(ctx context.Context, params TicketsGetParams) (r TicketsGetRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// TicketsPost implements POST /tickets operation.
+//
+// 新規チケットを作成する。.
+//
+// POST /tickets
+func (UnimplementedHandler) TicketsPost(ctx context.Context, req *TicketsPostReq) (r TicketsPostRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// TicketsTicketIdDelete implements DELETE /tickets/{ticketId} operation.
+//
+// 本職のみ実行可能。.
+//
+// DELETE /tickets/{ticketId}
+func (UnimplementedHandler) TicketsTicketIdDelete(ctx context.Context, params TicketsTicketIdDeleteParams) (r TicketsTicketIdDeleteRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// TicketsTicketIdGet implements GET /tickets/{ticketId} operation.
+//
+// チケットに紐づくノート一覧(notes)も同時に返却される。.
+//
+// GET /tickets/{ticketId}
+func (UnimplementedHandler) TicketsTicketIdGet(ctx context.Context, params TicketsTicketIdGetParams) (r TicketsTicketIdGetRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// TicketsTicketIdNotesNoteIdDelete implements DELETE /tickets/{ticketId}/notes/{noteId} operation.
+//
+// ノート削除.
+//
+// DELETE /tickets/{ticketId}/notes/{noteId}
+func (UnimplementedHandler) TicketsTicketIdNotesNoteIdDelete(ctx context.Context, params TicketsTicketIdNotesNoteIdDeleteParams) error {
+	return ht.ErrNotImplemented
+}
+
+// TicketsTicketIdNotesNoteIdPut implements PUT /tickets/{ticketId}/notes/{noteId} operation.
+//
+// 送信ノートの編集時、既存のReviewを無効化する(Weightリセット)オプションがある。
+// Authorのみ実行可能。.
+//
+// PUT /tickets/{ticketId}/notes/{noteId}
+func (UnimplementedHandler) TicketsTicketIdNotesNoteIdPut(ctx context.Context, req *TicketsTicketIdNotesNoteIdPutReq, params TicketsTicketIdNotesNoteIdPutParams) (r TicketsTicketIdNotesNoteIdPutRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// TicketsTicketIdNotesNoteIdReviewsPost implements POST /tickets/{ticketId}/notes/{noteId}/reviews operation.
+//
+// 承認(approve)の場合、Weightの上限はユーザー権限に基づく(本職5/補佐4/他0)。
+// Weight合計が5以上になると、Noteのstatusが`waiting_sent`になる。
+// すでにレビュー済みの場合は失敗する。.
+//
+// POST /tickets/{ticketId}/notes/{noteId}/reviews
+func (UnimplementedHandler) TicketsTicketIdNotesNoteIdReviewsPost(ctx context.Context, req *TicketsTicketIdNotesNoteIdReviewsPostReq, params TicketsTicketIdNotesNoteIdReviewsPostParams) (r *Review, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// TicketsTicketIdNotesNoteIdReviewsReviewIdDelete implements DELETE /tickets/{ticketId}/notes/{noteId}/reviews/{reviewId} operation.
+//
+// レビュー取り消し.
+//
+// DELETE /tickets/{ticketId}/notes/{noteId}/reviews/{reviewId}
+func (UnimplementedHandler) TicketsTicketIdNotesNoteIdReviewsReviewIdDelete(ctx context.Context, params TicketsTicketIdNotesNoteIdReviewsReviewIdDeleteParams) error {
+	return ht.ErrNotImplemented
+}
+
+// TicketsTicketIdNotesNoteIdReviewsReviewIdPut implements PUT /tickets/{ticketId}/notes/{noteId}/reviews/{reviewId} operation.
+//
+// ReviewのAuthorのみ実行可能。.
+//
+// PUT /tickets/{ticketId}/notes/{noteId}/reviews/{reviewId}
+func (UnimplementedHandler) TicketsTicketIdNotesNoteIdReviewsReviewIdPut(ctx context.Context, req OptTicketsTicketIdNotesNoteIdReviewsReviewIdPutReq, params TicketsTicketIdNotesNoteIdReviewsReviewIdPutParams) error {
+	return ht.ErrNotImplemented
+}
+
+// TicketsTicketIdNotesPost implements POST /tickets/{ticketId}/notes operation.
+//
+// ノート追加.
+//
+// POST /tickets/{ticketId}/notes
+func (UnimplementedHandler) TicketsTicketIdNotesPost(ctx context.Context, req *TicketsTicketIdNotesPostReq, params TicketsTicketIdNotesPostParams) (r *Note, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// TicketsTicketIdPatch implements PATCH /tickets/{ticketId} operation.
+//
+// 関係者と渉外のみ実行可能。.
+//
+// PATCH /tickets/{ticketId}
+func (UnimplementedHandler) TicketsTicketIdPatch(ctx context.Context, req OptTicketsTicketIdPatchReq, params TicketsTicketIdPatchParams) (r TicketsTicketIdPatchRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// UsersGet implements GET /users operation.
+//
+// ユーザー一覧取得.
+//
+// GET /users
+func (UnimplementedHandler) UsersGet(ctx context.Context) (r []User, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// UsersPut implements PUT /users operation.
+//
+// Manager(本職)権限のみ。リクエストボディの内容でユーザー情報を一括更新・同期する。.
+//
+// PUT /users
+func (UnimplementedHandler) UsersPut(ctx context.Context, req []User) (r UsersPutRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
